fixed gap between slider and content, removed edit link in checkout

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -80,6 +80,11 @@ a {
   background-color: white;
 }
 
+/* Embedded checkout */
+#cart-edit-link {
+  display: none;
+}
+
 /* Start purging... */
 @tailwind utilities;
 /* Stop purging. */
